--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 * {
     /* Свойства для сброса начальных стилей элементов */
+    margin: 0; 
+    padding: 0;
+    box-sizing: border-box;
 }
 
-body {}
+body {
+    font-family: 'Inter' sans-serif;
+}
 
 header {
     /* Стили для хедера */
