--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 }
 
 body {
-    font-family: 'Inter' sans-serif;
+    font-family: 'Inter';
+    color: #303030;
 }
 
 header {
@@ -28,18 +29,28 @@ header.span {
 
 .main-section {
     /* Стили для первой секции */
+    background-color: #fafaff;
+    padding: 60px 0;
+    min-height: 100vh;
 }
 
 .main-title {
     /* Стили для заголовка в первой секции */
+    font-weight: 700;
+    font-size: 48px;
 }
 
 .main-text {
     /* Стили для текста в первой секции */
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 18px;
+    margin-bottom: 20px;
 }
 
 .main-image {
     /* Стили для изображения в первой секции */
+    max-width: 715px;
 }
 
 
