--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ select {
 .frameworks-list {
     /* Стили для маркированного списка во второй секции */
     list-style-image: url(./images/solar_map-arrow-up-bold.svg);
-    padding-left: 20px;
+    padding: 0px 20px;
     font-weight: 400;
     font-size: 16px;
 }
@@ -94,7 +94,7 @@ select {
     /* Стили для нумерованного списка во второй секции */
     font-weight: 400;
     font-size: 16px;
-    padding-left: 20px;
+    padding: 0px 20px;
 }
 
 .label {
@@ -148,14 +148,13 @@ table {
 
 th, td {
     /* Стили для ячеек таблицы */
-    padding: 10px;
+    padding: 12px 15px;
 }
 
 footer {
     /* Стили для футера */
     background-color: #A3A7FF;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding: 26px 0px;
 }
 
 .footer-link {
